fix: visible errors, profile image

--- a/memotime/static_dev/css/profile.css
+++ b/memotime/static_dev/css/profile.css
@@ -24,6 +24,8 @@ main{
     .profile__image{
       width: 400px;
       height: 400px;
+      object-fit: cover;
+      object-position: center;
       border: var(--border);
       box-shadow: var(--shadow);
       color: var(--text-color);
